[package]
name = "iterx"
version = "0.0.5"
authors = ["Conor Hoekstra"]
edition = "2021"
license = "MIT"
description = "Rust library that provides several functions on the Iterator trait not found in std::iter or Itertools."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
